增加教室设置静态

--- a/src/coursePage/pageszero/course/course.less
+++ b/src/coursePage/pageszero/course/course.less
@@ -40,7 +40,7 @@ page {
 }
 
 .out-wrap {
-  margin-top: 98rpx;
+  //margin-top: 98rpx;
   padding-bottom: 0;
 }
 
@@ -169,3 +169,37 @@ page {
   }
 }
 
+//样式重置
+
+.top-info {
+  .top-bg {
+    width: 100%;
+    height: 180rpx;
+  }
+  .user-img {
+    top: 30rpx;
+    left: 30rpx;
+    width: 90rpx;
+    height: 90rpx;
+    border: 2rpx soldi #fff;
+  }
+  .user-name {
+    top: 54rpx;
+    left: 140rpx;
+  }
+}
+
+.mt-30 {
+  margin-top: -30rpx;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  overflow: hidden;
+  border-top-left-radius: 18rpx;
+  border-top-right-radius: 18rpx;
+  view {
+    transition: all .2s;
+    flex: 1;
+    text-align: center;
+  }
+}
