--- a/src/pages/user/user.less
+++ b/src/pages/user/user.less
@@ -12,11 +12,49 @@
 
 .room-info {
   margin-top: -60rpx;
-  min-height: 192rpx;
+  height: 192rpx;
+  .r-i {
+    height: 192rpx;
+  }
   .r-i-bg {
+    width: 100%;
+    height: 192rpx;
+    top: 0;
+    left: 0;
+  }
+  .r-i-t {
     width: 100%;
     height: 100%;
     top: 0;
     left: 0;
+    image {
+      top: 30rpx;
+      right: 30rpx;
+      width: 100rpx;
+      height: 100rpx;
+    }
+    .bottom {
+      bottom: 30rpx;
+      left: 30rpx;
+    }
+    .jwq-xialasanjiao::before {
+      position: absolute;
+      top: 55%;
+      right: -40rpx;
+      font-size: 24rpx;
+      transform: translate(0, -50%) rotate(-90deg);
+    }
   }
+}
+
+.message {
+  display: flex;
+  align-items: center;
+  .m-center {
+    margin: 0 20rpx;
+  }
+}
+
+.jwqfont::before {
+  margin-right: 10rpx;
 }
