增加门店段发布预览的静态

--- a/src/common/common.less
+++ b/src/common/common.less
@@ -5,6 +5,9 @@ page {
 .keep {
   word-break: keep-all;
 }
+.mb40 {
+  margin-bottom: 40rpx;
+}
 .mr30 {
   margin-right: 30rpx;
 }
@@ -22,6 +25,9 @@ page {
 }
 .mt10 {
   margin-top: 10rpx;
+}
+.mt60 {
+  margin-top: 60rpx;
 }
 
 .ml0 {
@@ -199,8 +205,8 @@ button {
   right: 40rpx;
   height: 26rpx;
   width: 26rpx;
-  border: 2rpx solid #999;
-  border-color: #999 #999 transparent transparent;
+  border: 2rpx solid #444;
+  border-color: #444 #444 transparent transparent;
   transform: translate(0, -50%) rotate(45deg);
 }
 
