--- a/src/releasePage/pageseleven/release/release.less
+++ b/src/releasePage/pageseleven/release/release.less
@@ -30,12 +30,95 @@
 
 .i-title {
   padding: 0rpx 30rpx;
-  height: 88rpx;
-  line-height: 88rpx;
+  min-height: 88rpx;
+  height: inherit;
 }
 
 .show-time {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.shop-address {
+  display: flex;
+  align-items: center;
+}
+
+.arrow {
+  flex: 1;
+  &:after {
+    right: 0;
+    width: 12rpx;
+    height: 12rpx;
+  }
+}
+
+.add-video {
+  .a-v-btn {
+    width: 100%;
+    //padding: 14rpx 0;
+    height: 88rpx;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 700;
+  }
+  .video-area {
+    width: 100%;
+  }
+}
+
+.up-img {
+  @width: 180rpx;
+  display: flex;
+  flex-wrap: wrap;
+  image {
+    width: @width;
+    height: @width;
+    margin: 10rpx;
+  }
+  .up-btn {
+    display: inline-block;
+    margin: 10rpx;
+    width: @width;
+    height: @width;
+    border: 2rpx dashed #bbb;
+    position: relative;
+    &:before {
+      font-size: 100rpx;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      color: #bbb;
+      transform: translate(-50%, -50%);
+    }
+  }
+
+  .up-progress {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: @width;
+    height: @width;
+    .tac {
+      padding: 2rpx 6rpx;
+      border-radius: 20rpx;
+      background-color: #eee;
+    }
+  }
+}
+
+.bottom-btn {
+  position: fixed;
+  bottom: 30rpx;
+  left: 0;
+  width: 100%;
+  padding: 0 30rpx;
+  view {
+    width: 100%;
+    background:rgba(255,59,91,0.9);
+    border-radius: 50rpx;
+    box-shadow: 0rpx 10rpx 10rpx 6rpx rgba(255, 228, 232, 0.8);
+  }
 }
