--- a/src/coursePage/pageszero/courseDetail/courseDetail.less
+++ b/src/coursePage/pageszero/courseDetail/courseDetail.less
@@ -1,8 +1,19 @@
 @import "../../../common/variable";
-
+.p020 {
+  padding-bottom: 20rpx;
+}
 page {
   background: #eee;
   height: 100%;
+}
+
+.swiper-tag {
+  position: absolute;
+  bottom: 30rpx;
+  right: 30rpx;
+  background: rgba(0,0,0,0.3);
+  padding: 4rpx 15rpx;
+  border-radius: 50rpx;
 }
 
 .out-scroll {
@@ -129,7 +140,7 @@ page {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    .iconfont {
+    .jwqfont {
       word-break: keep-all;
       display: flex;
       align-items: center;
@@ -146,7 +157,7 @@ page {
       }
     }
     
-    .icon-xinheart118::before {
+    .jwq-xinheart118::before {
       color: #ff3b5b;
     }
   }
@@ -200,7 +211,7 @@ page {
     justify-content: space-between;
     transition: all 0.5s;
     overflow: hidden;
-    .iconfont {
+    .jwqfont {
       margin-left: 30rpx;
     }
   }
@@ -208,7 +219,7 @@ page {
   .no-height {
     height: 0;
   }
-  .icon-jinru {
+  .jwq-jinru {
     display: inline-block;
     transition: all 0.5s;
   }
@@ -319,7 +330,7 @@ page {
     border-bottom-color: #C9C9C9;
   }
 
-  .icon-bofang1 {
+  .jwq-bofang1 {
     &:before {
       margin-left: 20rpx;
     }
@@ -339,7 +350,7 @@ page {
       margin-left: 20rpx;
       display: flex;
       align-items: center;
-      .iconfont {
+      .jwqfont {
         margin-left: 10rpx;
         &:nth-child(1) {
           margin-left: 0;
@@ -362,7 +373,7 @@ page {
       display: flex;
       align-items: center;
       justify-content: flex-end;
-      .iconfont {
+      .jwqfont {
         //margin-right: 30rpx;
         &:before {
           margin-right: 5rpx;
@@ -468,13 +479,13 @@ page {
   .answer-choose {
     margin: 10rpx 0;
   }
-  .icon-wxz {
+  .jwq-wxz {
     color: #999;
   }
-  .icon-xuanzeanniu, .icon-zhengque1 {
+  .jwq-xuanzeanniu, .jwq-zhengque1 {
     color: #24AE18;
   }
-  .icon-cuowu {
+  .jwq-cuowu {
     color: @mainColor;
   }
 }
@@ -574,7 +585,7 @@ page {
     height: 100%;
     width: 100%;
   }
-  .icon-fabu {
+  .jwq-fabu {
     color: #333;
     position: absolute;
     top: 0;
@@ -743,4 +754,18 @@ page {
   position: fixed;
   top: 480rpx;
   left: 20rpx;
+}
+
+.bottom-btn {
+  position: fixed;
+  bottom: 30rpx;
+  left: 0;
+  width: 100%;
+  padding: 0 30rpx;
+  view {
+    width: 100%;
+    background:rgba(255,59,91,0.9);
+    border-radius: 50rpx;
+    box-shadow: 0rpx 10rpx 10rpx 6rpx rgba(255, 228, 232, 0.8);
+  }
 }
