--- a/src/common/color.less
+++ b/src/common/color.less
@@ -84,6 +84,17 @@
 .cb670f7 {
   color: #b670f7;
 }
+
 .c3a3a3a {
   color: #3a3a3a;
+}
+
+.ca3633e {
+  color: #a3633e;
+}
+.c9b735e {
+  color: #9B735E;
+}
+.ce9ab86 {
+  color: #e9ab86;
 }
