--- a/src/incomePage/pagesone/income/income.less
+++ b/src/incomePage/pagesone/income/income.less
@@ -8,12 +8,24 @@
   width: 120rpx;
   line-height: 54rpx;
   border-radius: 27rpx;
-  border: 2rpx solid #ff3b5b;
   box-sizing: border-box;
+  background:rgba(255,255,255,1);
 }
 
 .df {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.incomebg {
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.transparent {
+  background: transparent;
 }
