--- a/src/messagePage/pagestwo/messageDetail/messageDetail.less
+++ b/src/messagePage/pagestwo/messageDetail/messageDetail.less
@@ -14,3 +14,16 @@ page {
   width: 100%;
   height: 100%;
 }
+
+.message {
+  display: flex;
+  align-items: center;
+  image {
+    width: 68rpx;
+    height: 68rpx;
+    margin-right: 10rpx;
+  }
+  .m-center {
+    margin: 0 20rpx;
+  }
+}
